gitops/stages/060-agent-runtime-and-agentops/runtime-candidate/rendered/namespace-cluster-openshell.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Delete=false,Prune=false
    argocd.argoproj.io/sync-wave: '-30'
  labels:
    app.kubernetes.io/component: agent-runtime
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: openshell
    app.kubernetes.io/part-of: rhoai3-coding-demo
  name: openshell
