gitops/stages/060-agent-runtime-and-agentops/runtime-candidate/rendered/service-openshell-openshell.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: openshell
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: openshell
    app.kubernetes.io/version: 12cec59bf4c36c305032143eb90870bd16d8820b
    helm.sh/chart: helm-chart-0.0.0-dev.12cec59bf4c36c305032143eb90870bd16d8820b
  name: openshell
  namespace: openshell
spec:
  ports:
  - appProtocol: grpc
    name: grpc
    port: 8080
    protocol: TCP
    targetPort: grpc
  - name: metrics
    port: 9090
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/instance: openshell
    app.kubernetes.io/name: openshell
  type: ClusterIP
